deploy/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: ecr
      containers:
        - image: 990223444407.dkr.ecr.us-west-2.amazonaws.com/bingematch-api:VERSION
          name: api
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "400m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          ports:
            - containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /startup
              port: 8080
            initialDelaySeconds: 25
            failureThreshold: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            failureThreshold: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  selector: 
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
