deploy/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      #      affinity:
      #        podAntiAffinity:
      #          requiredDuringSchedulingIgnoredDuringExecution:
      #            - labelSelector:
      #                matchExpressions:
      #                  - key: app
      #                    operator: In
      #                    values:
      #                      - api
      #              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: postgres
          image: postgres:13.3-alpine
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "100m"
              memory: "1Gi"
            limits:
              cpu: "100m"
              memory: "1Gi"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
              readOnly: false
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-storage-claim

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
