deploy/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      restartPolicy: Always
      containers:
        - image: '990223444407.dkr.ecr.us-west-2.amazonaws.com/bingematch-ui:latest'
          name: ui
          ports:
            - containerPort: 5000
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
