deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
        - path: /api(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: api
              port:
                number: 8080
#          - path: /(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: ui
#                port:
#                  number: 5000
#
#---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  namespace: metallb-system
#  name: config
#data:
#  config: |
#    address-pools:
#    - name: default
#      protocol: layer2
#      addresses:
#      - 172.18.0.0/16
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: ingress-nginx
#  namespace: default
#  labels:
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/part-of: ingress-nginx
#spec:
#  type: LoadBalancer
##  externalIPs:
##    - 192.168.1.191
#  ports:
#    - name: http
#      port: 80
#      targetPort: 80
#      protocol: TCP
#  selector:
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/part-of: ingress-nginx
#
